<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SDDActivity"
    android:background="#ff000000">

    <Button
        android:id="@+id/dateSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose a date..."
        android:onClick="showDatePickerDialog"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="example_data"
        android:textColor="@android:color/white"
        android:layout_below="@+id/dateSelector"
        android:paddingLeft="5dp"/>

    <ImageView
        android:id="@+id/symphonyLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/center_image_desc"
        android:src="@drawable/symphony_logo_inverted_scaled"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/musicSeekBar"
        android:layout_below="@+id/data"/>

    <TextView
        android:id="@+id/text_shown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/musicSeekBar"
        android:layout_alignEnd="@+id/musicSeekBar"
        android:layout_alignRight="@+id/stop"
        android:text="@string/init_time"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/musicSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pause"
        android:layout_alignEnd="@+id/stop"
        android:layout_alignRight="@+id/stop"
        android:layout_alignStart="@+id/play"
        android:layout_alignLeft="@+id/play"
        android:maxHeight="3dp"
        android:thumb="@drawable/symphony_seekbar_logo" />

    <ImageButton
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:contentDescription="@string/pause_button_desc"
        android:src="@drawable/pause_button" />

    <ImageButton
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/pause"
        android:background="@null"
        android:contentDescription="@string/stop_button_desc"
        android:src="@drawable/stop_button" />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:contentDescription="@string/play_button_desc"
        android:src="@drawable/play_button"
        android:layout_toLeftOf="@+id/pause"
        android:layout_toStartOf="@+id/pause" />

</RelativeLayout>
